# libbfxx

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
doc/: libbf++.md  libbf.md
include/: bf.hpp  numeric.hpp  unbound.hpp
src/: bracket.cpp  numeric.cpp  round.cpp  test_bf.cpp  test_bf_dec.cpp  test_numeric.cpp
